feat: Major widgets refactor, splits & macros (#4)